<resources>
    <string name="app_name">Blood Pressure Diary</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_print">Print</string>
    <string name="action_info">Info</string>
    <string name="action_add">Add</string>
    <string name="action_export">Export</string>
    <string name="action_confirm">Confirm</string>
    <string name="imageViewTrend">Image showing the current trend</string>
    <string name="oops">Oops..</string>
    <string name="dataTypeSystole">Systole</string>
    <string name="dataTypeDiastole">Diastole</string>
    <string name="dataTypeHeartRate">Heart Rate</string>
    <string name="dataTypeWeight">Weight</string>
    <string name="activity_add_data_item">Add Measurement</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_info">Information</string>
    <string name="activity_export">Export</string>
    <string name="activity_progression">Overview</string>
    <string name="activity_data_item_choser">Chose Measurement</string>
    <string name="dataTypeBloodPressure">Blood Pressure</string>
    <string name="date_and_time">Time and Date: </string>
    <string name="dot">.</string>
    <string name="bpSeperator">/</string>
    <string name="unit_bloodPressure">mmHg</string>
    <string name="unit_heartrate">bpm</string>
    <string name="unit_weight">kg</string>
    <string name="addValue">Add %s value</string>
    <string name="name">Name:</string>
    <string name="enterPersonalData">Your personal data:</string>
    <string name="unit_height">cm</string>
    <string name="size">Size:</string>
    <string name="valuesToTrack">Parameters to track:</string>
    <string name="birthday">Birthday:</string>
    <string name="settingsText">Configure your\nBlood Pressure Diary</string>
    <string name="action_edit">Edit</string>
    <string name="imageSaveResult">Successfully exported image to %s</string>
    <string name="activity_edit_data_items">Edit Data Items</string>
    <string name="dialog_delete_title">Delete Data Item</string>
    <string name="dialog_delete_message">Are you sure you wish to delete the selected data item?</string>
</resources>
