<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/largeTextSize"
            android:gravity="center"
            android:text="@string/settingsText"
            android:layout_marginBottom="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalTextSize"
            android:text="@string/enterPersonalData"
            android:layout_marginBottom="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12sp">
            <TextView
                android:layout_width="@dimen/welcomeLeftLabel"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalTextSize"
                android:text="@string/name"/>

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
                android:background="@color/colorGray"
                android:textSize="@dimen/largeTextSize"
            android:ems="10"
            android:id="@+id/editTextPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="12sp">
            <TextView
                android:layout_width="@dimen/welcomeLeftLabel"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalTextSize"
                android:text="@string/size"/>

            <NumberPicker
                android:layout_width="120sp"
                android:layout_height="90sp"
                android:ems="10"
                android:id="@+id/numberPickerCentimeters" />

            <TextView
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:textSize="@dimen/largeTextSize"
                android:text="@string/unit_height"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="24sp">
            <TextView
                android:layout_width="@dimen/welcomeLeftLabel"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalTextSize"
                android:text="@string/birthday"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:calendarViewShown="false"
                android:ems="10"
                android:id="@+id/datePickerBirthday" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalTextSize"
            android:text="@string/valuesToTrack"

            android:layout_marginBottom="12sp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:id="@+id/listViewChoseTrackedItems"
            android:layout_marginBottom="24sp"/>

        <Button
            android:text="@string/action_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmitData" />

    </LinearLayout>

</ScrollView>
