<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:id="@+id/graphProgression" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addFromProgressionView"
            android:text="@string/action_add"
            android:layout_marginRight="24sp"
            android:layout_marginEnd="24sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editFromProgressionView"
            android:text="@string/action_edit"
            android:layout_marginRight="24sp"
            android:layout_marginEnd="24sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/infoFromProgressionView"
            android:text="@string/action_info"/>

    </LinearLayout>

    </LinearLayout>

</ScrollView>
